[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game/Datapacks/UI/PackVariables.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/Datapacks/UI/DatapackEditor.gd" type="Script" id=2]
[ext_resource path="res://GlobalTheme.tres" type="Theme" id=3]

[node name="DatapackEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 617.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PackVariablesScroll" type="ScrollContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 1280.0
margin_bottom = 617.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PackVariables" parent="VBoxContainer/HBoxContainer/PackVariablesScroll" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 25.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 620.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 100 )
columns = 5

[node name="SaveButton" type="Button" parent="VBoxContainer/GridContainer"]
margin_right = 256.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "Save"

[node name="CancelButton" type="Button" parent="VBoxContainer/GridContainer"]
margin_left = 259.0
margin_right = 515.0
margin_bottom = 23.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 0.423529, 0.423529, 1 )
text = "Cancel ALL changes"

[connection signal="onVariableChange" from="VBoxContainer/HBoxContainer/PackVariablesScroll/PackVariables" to="." method="_on_PackVariables_onVariableChange"]
[connection signal="pressed" from="VBoxContainer/GridContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
